--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "html-to-image": "^1.11.11",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
@@ -14,6 +15,8 @@
     "react-icons": "^4.9.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
+    "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "uuid": "^9.0.0",
@@ -45,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-slider": "^1.3.1",
     "@types/uuid": "^9.0.1"
   }
 }
