--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
+    "uniqid": "^5.4.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
