--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
+    "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
