--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
+    "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
     "react-tooltip": "^5.18.0",
