--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
+    "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-slider": "^2.0.6",
