--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "react-flow",
   "version": "0.1.0",
   "private": true,
-  "homepage":".",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "downshift": "^8.1.0",
     "html-to-image": "^1.11.11",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
