--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "downshift": "^8.1.0",
     "html-to-image": "^1.11.11",
+    "moment": "^2.29.4",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
