--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
+    "socket.io-client": "^4.7.2",
     "uniqid": "^5.4.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
