--- a/package.json
+++ b/package.json
@@ -4,17 +4,14 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.11",
     "axios": "^1.4.0",
+    "babel-jest": "^29.7.0",
     "downshift": "^8.1.0",
     "file-loader": "^6.2.0",
     "html-to-image": "^1.11.11",
     "moment": "^2.29.4",
     "node-sass": "^7.0.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
@@ -28,6 +25,7 @@
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "socket.io-client": "^4.7.2",
+    "ts-jest": "^29.1.1",
     "uniqid": "^5.4.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4",
@@ -36,8 +34,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test": "jest"
   },
   "eslintConfig": {
     "extends": [
@@ -58,7 +56,20 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
     "@types/react-slider": "^1.3.1",
-    "@types/uuid": "^9.0.1"
+    "@types/uuid": "^9.0.1",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-transform-stub": "^2.0.0",
+    "jsdom": "^23.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
