--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "file-loader": "^6.2.0",
     "html-to-image": "^1.11.11",
     "moment": "^2.29.4",
-    "node-sass": "^7.0.3",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
@@ -70,6 +69,7 @@
     "jest-transform-stub": "^2.0.0",
     "jsdom": "^23.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.69.6"
   }
 }
