setted up push.js

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ts-jest": "^29.1.1",
     "uniqid": "^5.4.0",
     "uuid": "^9.0.0",
+    "web-push": "^3.6.6",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8"
   },
