testing notifications in prod

--- a/package.json
+++ b/package.json
@@ -5,27 +5,40 @@
   "homepage": ".",
   "dependencies": {
     "@types/jest": "^29.5.11",
+    "assert": "^2.1.0",
     "axios": "^1.4.0",
     "babel-jest": "^29.7.0",
+    "core-js": "^3.35.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
     "downshift": "^8.1.0",
+    "express": "^4.18.2",
     "file-loader": "^6.2.0",
     "html-to-image": "^1.11.11",
+    "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
+    "node-polyfill-webpack-plugin": "^3.0.0",
+    "push": "^0.1.1",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
     "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "socket.io-client": "^4.7.2",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "ts-jest": "^29.1.1",
     "uniqid": "^5.4.0",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "uuid": "^9.0.0",
     "web-push": "^3.6.6",
     "web-vitals": "^2.1.4",
@@ -33,6 +46,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "node ./src/push.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "test": "jest"
@@ -60,6 +74,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/react-slider": "^1.3.1",
     "@types/uuid": "^9.0.1",
+    "@types/web-push": "^3.6.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -67,6 +82,7 @@
     "jsdom": "^23.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass": "^1.69.6"
+    "sass": "^1.69.6",
+    "workbox-webpack-plugin": "^7.0.0"
   }
 }
