chabged netlify toml file

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,4 @@
 [[redirects]]
-  from = "/*"
+  from = "../*"
   to = "/index.html"
   status = 200
-  force = true
-  headers = { Content-Type = "text/html" }
