chabged netlify toml file

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,17 @@
 [[redirects]]
-  from = "../*"
+  from = "/*.js"
+  to = ":splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*.css"
+  to = ":splat"
+  status = 200
+  force = true
+
+[[redirects]]
+  from = "/*"
   to = "/index.html"
   status = 200
+  force = true
