chabged routes settings

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,4 @@
 [[redirects]]
-  from = "/*.js"
-  to = ":splat"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/*.css"
-  to = ":splat"
-  status = 200
-  force = true
-
-[[redirects]]
-  from = "/*"
+  from = "../*"
   to = "/index.html"
   status = 200
-  force = true
