chabged routes settings

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
 [[redirects]]
-  from = "../*"
+  from = "/*"
   to = "/index.html"
   status = 200
+  force = true
+  conditions = { PathPattern = "!^/static/*" }
