--- a/netlify.toml
+++ b/netlify.toml
@@ -2,5 +2,8 @@
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
 
+[[redirects]]
+  from = "/*/*"
+  to = "/index.html"
+  status = 200
