--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,5 @@
 [[redirects]]
-  from = "/*"
+  from = "*"
   to = "/index.html"
   status = 200
 
-[[redirects]]
-  from = "*/"
-  to = "/index.html"
-  status = 200
