--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
+    "react-resizable": "^3.0.5",
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
+    "react-table": "^7.8.0",
     "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
+    "react-widgets": "^5.8.4",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "socket.io-client": "^4.7.2",
@@ -72,7 +75,9 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/react-resizable": "^3.0.7",
     "@types/react-slider": "^1.3.1",
+    "@types/react-table": "^7.7.19",
     "@types/uuid": "^9.0.1",
     "@types/web-push": "^3.6.3",
     "identity-obj-proxy": "^3.0.0",
