--- a/package.json
+++ b/package.json
@@ -4,22 +4,26 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.11",
     "assert": "^2.1.0",
     "axios": "^1.4.0",
     "babel-jest": "^29.7.0",
+    "chart.js": "^4.4.1",
     "core-js": "^3.35.0",
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
     "downshift": "^8.1.0",
     "express": "^4.18.2",
+    "faker": "^6.6.6",
     "file-loader": "^6.2.0",
     "html-to-image": "^1.11.11",
     "https-browserify": "^1.0.0",
     "moment": "^2.29.4",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "push": "^0.0.1",
+    "react-chartjs-2": "^5.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
     "react-navigation": "^4.4.4",
@@ -73,6 +77,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
     "@types/react-resizable": "^3.0.7",
