--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
     "react-widgets": "^5.8.4",
+    "reactflow": "^11.10.4",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "socket.io-client": "^4.7.2",
