--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.4",
     "node-polyfill-webpack-plugin": "^3.0.0",
     "push": "^0.0.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
@@ -81,6 +82,7 @@
     "@faker-js/faker": "^8.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-resizable": "^3.0.7",
     "@types/react-slider": "^1.3.1",
     "@types/react-table": "^7.7.19",
