--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@types/uuid": "^9.0.1",
     "@types/web-push": "^3.6.3",
     "identity-obj-proxy": "^3.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
