added babel dep

--- a/package.json
+++ b/package.json
@@ -62,7 +62,9 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "@babel/plugin-transform-private-property-in-object", 
+      "next/core-web-vitals"
     ]
   },
   "browserslist": {
@@ -78,6 +80,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.24.6",
     "@faker-js/faker": "^8.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
