--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
+      "react-app/jest"
     ]
   },
   "browserslist": {
