--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@faker-js/faker": "^8.4.0",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@types/module-alias": "^2.0.4",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-resizable": "^3.0.7",
     "@types/react-slider": "^1.3.1",
@@ -93,10 +94,13 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0",
     "jsdom": "^23.0.1",
+    "module-alias": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.69.6",
     "source-map-loader": "^5.0.0",
+    "tsconfig-paths": "^4.2.0",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.90.0",
     "workbox-webpack-plugin": "^7.0.0"
   }
