--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-icons": "^4.9.0",
+    "react-loader-spinner": "^6.1.6",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
     "react-resizable": "^3.0.5",
@@ -34,6 +35,7 @@
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
     "react-slider": "^2.0.6",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
