--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
   "homepage": ".",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/faker": "^6.6.9",
-    "@types/jest": "^29.5.11",
     "assert": "^2.1.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.1",
@@ -46,7 +44,6 @@
     "socket.io-client": "^4.7.2",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
-    "ts-jest": "^29.1.1",
     "uniqid": "^5.4.0",
     "url": "^0.11.3",
     "util": "^0.12.5",
@@ -60,7 +57,7 @@
     "start-server": "node ./src/push.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": [
@@ -81,16 +78,25 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@faker-js/faker": "^8.4.0",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.1.2",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^29.5.12",
     "@types/module-alias": "^2.0.4",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-resizable": "^3.0.7",
     "@types/react-slider": "^1.3.1",
     "@types/react-table": "^7.7.19",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/uuid": "^9.0.1",
     "@types/web-push": "^3.6.3",
+    "babel-jest": "^29.7.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -101,9 +107,14 @@
     "react-dom": "^18.2.0",
     "sass": "^1.69.6",
     "source-map-loader": "^5.0.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.90.0",
     "workbox-webpack-plugin": "^7.0.0"
+  },
+  "jest": {
+    "transform": {}
   }
 }
