--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "assert": "^2.1.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.1",
@@ -57,7 +56,7 @@
     "start-server": "node ./src/push.js",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "test": "react-scripts test"
+    "test": "jest --config jest.config.ts"
   },
   "eslintConfig": {
     "extends": [
@@ -79,6 +78,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@faker-js/faker": "^8.4.0",
@@ -93,7 +93,6 @@
     "@types/react-resizable": "^3.0.7",
     "@types/react-slider": "^1.3.1",
     "@types/react-table": "^7.7.19",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@types/uuid": "^9.0.1",
     "@types/web-push": "^3.6.3",
     "babel-jest": "^29.7.0",
@@ -113,8 +112,5 @@
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "webpack": "^5.90.0",
     "workbox-webpack-plugin": "^7.0.0"
-  },
-  "jest": {
-    "transform": {}
   }
 }
