--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@types/react-csv": "^1.1.10",
+    "@types/react-gauge-chart": "^0.4.3",
     "assert": "^2.1.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.1",
@@ -25,6 +26,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
     "react-flow-renderer": "^10.3.17",
+    "react-gauge-chart": "^0.5.1",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^6.1.6",
     "react-navigation": "^4.4.4",
@@ -40,6 +42,7 @@
     "react-useanimations": "^2.10.0",
     "react-widgets": "^5.8.4",
     "reactflow": "^11.11.3",
+    "recharts": "^2.15.3",
     "redux": "^4.2.1",
     "sass-loader": "^13.3.0",
     "socket.io-client": "^4.7.2",
