added xml, json converter

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "crypto": "^1.0.1",
     "crypto-browserify": "^3.12.0",
     "crypto-js": "^4.2.0",
+    "d3": "^7.9.0",
     "downshift": "^8.1.0",
     "express": "^4.18.2",
     "faker": "^6.6.6",
+    "fast-xml-parser": "^5.2.5",
     "file-loader": "^6.2.0",
     "html-to-image": "^1.11.11",
     "https-browserify": "^1.0.0",
@@ -26,6 +28,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-csv": "^2.2.2",
+    "react-d3-tree": "^3.6.6",
     "react-flow-renderer": "^10.3.17",
     "react-gauge-chart": "^0.5.1",
     "react-icons": "^4.9.0",
@@ -42,6 +45,7 @@
     "react-tooltip": "^5.18.0",
     "react-useanimations": "^2.10.0",
     "react-widgets": "^5.8.4",
+    "react-xml-parser": "^1.1.8",
     "reactflow": "^11.11.3",
     "recharts": "^2.15.3",
     "redux": "^4.2.1",
